# FABULOUS

./: .gitignore  FABULOUS.yml  README.md  environment.yml  genetic_optimizer.py  keras_utilities.py  main.py  model.py  setup.cfg
analysis/: analysis.ipynb
examples/alanine_dipeptide/: ad_setup.yml  analysis.ipynb  analysis_cv.ipynb  main.py
fabulous/: __init__.py  genetic_optimizer.py  model.py
