[metadata]
name = FABULOUS
version = 0.0.1.dev1
description = Collective variable discovery
long_description = file: README.md
long_description_content_type = text/markdown
author = Ferry Hooft, Alberto Pérez de Alba Ortíz and Bernd Ensing
author_email = ferry_hooft@hotmail.com
license = LGPL 3+
url = https://github.com/Ensing-Laboratory/FABULOUS
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry

[options]
include_package_data = True
install_requires =
    numpy
    mdtraj
    pandas
    matplotlib
    dict-hash
    tensorflow
packages = find:

[bdist_wheel]
universal=1